# hintshell

./: .gitignore  README.md  package.json  reload-hintshell.ps1
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs  shell.rs
cli/src/shell/: bash.rs  mod.rs  powershell.rs  zsh.rs
core/: Cargo.toml  default-commands.json
core/src/: lib.rs  main.rs
core/src/api/: protocol.rs  server.rs
core/src/engine/: matcher.rs
core/src/storage/: db.rs
integrations/powershell/HintShellModule/: HintShellDaemon.ps1  HintShellHandlers.ps1  HintShellModule.psd1  HintShellModule.psm1  HintShellOverlay.ps1
integrations/powershell/HintShellPredictor/: HintShellPredictor.cs  HintShellPredictor.csproj
scripts/: npm-install.js
