[package]
name = "hintshell"
version = "0.1.2"
edition = "2021"
description = "HintShell CLI - Control your Personal Command Intelligence Engine"

[[bin]]
name = "hintshell"
path = "src/main.rs"

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
hintshell-core = { path = "../core", package = "hintshell-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "net"] }
dirs = "5.0"
ureq = "2"
