[package]
name = "hintshell-core"
version = "0.1.2"
edition = "2021"
description = "HintShell Core Daemon - Personal Command Intelligence Engine"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["full", "net"] }

[dev-dependencies]
tempfile = "3"
